--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>by.co by by-co</title>
+    <title>code &amp; create</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,11 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>by.co</h1>
-        <p>code &amp; create</p>
+        <h1>code &amp; create</h1>
+        <p>a safe space for unapologetic experimenting</p>
 
 
-        <p class="view"><a href="https://github.com/by-co">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/by-co">my github profile</a></p>
 
       </header>
       <section>
