Added coursework and skills. Uploaded resume.pdf

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div id = "links">
                 <a href = "http://www.linkedin.com/in/xbarbarayang/">LinkedIn</a>
                 <a href = "https://github.com/by-co">GitHub</a>
-                <a href = "http://cargocollective.com">Portfolio</a>
+                <a href = "http://cargocollective.com/xbarbarayang">Portfolio</a>
                 
             </div>
         </header>
@@ -32,16 +32,15 @@
             <h2> University of California, Berkeley</h2>
             <h3> Expected grad. May 2019 </h3>
             <p>  Intended B.A. Computer Science</p>
+            <p>  Coursework includes Computer Programs, Data Structures, Machine Structures*, Discrete Math and Probability*</p>
         </div>
-<!--
         <div class = "section">
             <h1> Skills </h1>
-            <ul>
-                <li>Python, Java, HTML/CSS</li>
-                <li>Photoshop, Illustrator</li>
-            </ul>
+            <h2> Code</h2>
+            <h3> Python • Java • C* </h3>
+            <h2> Design </h2>
+            <h3> Photoshop • Illustrator • HTML/CSS • JavaScript*</h3>
         </div>
--->
         <div class = "section">
             <h1> Experience </h1>
             <h2> <a href = "http://girlswhocode.com">Girls Who Code </a></h2>
@@ -60,7 +59,8 @@
             
         </div>
         <footer>
-        <p> Last edit: December 30, 2016 </p>
+        <p> Last edit: January 15, 2017 </p>
+        <p> *in progress</p>
         </footer>
     </body>
 </html>
