--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         <div class = "section">
             <h1> Education </h1>
             <h2> University of California, Berkeley</h2>
-            <h3> B.A. Computer Science, 2019 </h3>
+            <h3> B.A. Cognitive Science, 2019 </h3>
             <p>  Coursework: CS61A Computer Programs, CS61B Data Structures, CS61C Machine Structures, CS70 Discrete Math and Probability</p>
         </div>
         <div class = "section">
             <h1> Experience </h1>
             <h2> <a href = "https://www.everlane.com/r/5efaex">Everlane</a></h2>
             <h3> Engineering intern, Summer 2017</h3>
-            <p> Working on front-end features using ReactJS.</p>
+            <p> Designed and developed a web application for retail customers.</p>
+            <p> (React, HTML, CSS) </p>
             <h2> <a href = "http://girlswhocode.com">Girls Who Code</a></h2>
             <h3> Teaching assistant, Summer 2016</h3>
             <p>  Assisted in the instruction of introductory CS curriculum to 20 high school girls.</p>
@@ -52,16 +53,15 @@
         <div class = "section">
             <h1> Skills </h1>
             <h2> Code</h2>
-            <h3> ReactJS* • HTML/CSS • Python • Java </h3>
+            <h3> ReactJS • HTML/CSS • Python • Java </h3>
             <h2> Design </h2>
             <h3> Photoshop • Illustrator • Typography • Lettering</h3>
             <h2> Tools </h2>
-            <h3> GitHub • Slack • Asana • Todoist • Quip (document editor) • Quip (toothbrush)</h3>
+            <h3> GitHub • Slack • Asana </h3>
         </div>
         </div>
         <footer>
-        <p> Last edit: June 1, 2017. Go Warriors! </p>
-        <p> *in progress</p>
+        <p> Last edit: August 28, 2017 </p>
         </footer>
     </body>
 </html>
