Update index.html for fall semester

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <header>
             <div id = "name"> Barbara Yang </div>
             <a id = "printable" href = "assets/resume.pdf" target ="_blank" > PDF </a>
+            <p> Currently open to full-time developer internships for Summer 2018 </p>
             <p> by@berkeley.edu </p>
             <div id = "links">
                 <a href = "http://linkedin.com/in/xbarbarayang/">LinkedIn</a>
@@ -35,8 +36,11 @@
         <div class = "section">
             <h1> Experience </h1>
             <h2> <a href = "https://www.everlane.com/r/5efaex">Everlane</a></h2>
+            <h3> Engineering contractor, SEPT 2017 - Present </h3>
+            <p>  Finishing up my intern project between days at school. </p>
+            <p>  (React, Redux)
             <h3> Engineering intern, Summer 2017</h3>
-            <p> Designed and developed a web application for retail customers.</p>
+            <p> Designed and developed a web application to optimize online shopping in a retail setting.</p>
             <p> (React, HTML, CSS) </p>
             <h2> <a href = "http://girlswhocode.com">Girls Who Code</a></h2>
             <h3> Teaching assistant, Summer 2016</h3>
@@ -46,7 +50,9 @@
         <div class = "section">
             <h1> Community &amp; Leadership </h1>
             <h2> <a href = "http://innovativedesign.club">Innovative Design</a> </h2>
-            <h3> VP External Affairs, AUG 2015 - present </h3>
+            <h3> VP External Affairs, AUG 2015 - Present </h3>
+            <p>  Currently organizing a day-long designathon for beginner and intermediate student designers. </p>
+            <p>  Contact me if you're a designer interested in joinig us at UC Berkeley on Nov. 4! </p>
             <p>  Managed logistics, e.g. emails, permits, room reservations,  membership, event calendar.</p>
             <p>  Led a team of eight designers to create pro bono design work for student organizations. </p>
             <p>  Designed <a href = "http://cargocollective.com/xbarbarayang/Logo">logos and visual assets</a> for off-campus organizations.</p>
