--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div id = "name"> Barbara Yang </div>
             <a id = "printable" href = "assets/resume.pdf" target ="_blank" > PDF </a>
-            <p> Currently open to full-time developer internships for Summer 2018 </p>
+            <p> Student, front-end developer, aspiring home chef </p>
             <p> by@berkeley.edu </p>
             <div id = "links">
                 <a href = "http://linkedin.com/in/xbarbarayang/">LinkedIn</a>
@@ -30,14 +30,23 @@
         <div class = "section">
             <h1> Education </h1>
             <h2> University of California, Berkeley</h2>
-            <h3> B.A. Cognitive Science, 2019 </h3>
-            <p>  Coursework: CS61A Computer Programs, CS61B Data Structures, CS61C Machine Structures, CS70 Discrete Math and Probability</p>
+            <h3> B.A. Cognitive Science, Minor in Computer Science, May 2019 </h3>
+            <p> Recent coursework that I've enjoyed: </p>
+            <ul>
+              <li> ART13 Painting; LING100 Intro to Linguistics; PSYCH167AC Stigma and Prejudice; CS184 Computer Graphics
+              </li>
+            </ul>
         </div>
         <div class = "section">
             <h1> Experience </h1>
+            <h2> <a href = "https://www.nerdwallet.com">Nerdwallet</a></h2>
+            <h3> Engineering Intern, Summer 2018 🎉🤓 </h3>
+            <p>  Incoming intern for the Mobile team.</p>
+            <p> (React Native) </p>
+
             <h2> <a href = "https://www.everlane.com/r/5efaex">Everlane</a></h2>
-            <h3> Engineering contractor, SEPT 2017 - Present </h3>
-            <p>  Finishing up my intern project between days at school. </p>
+            <h3> Engineering contractor, Fall/Winter 2017 </h3>
+            <p>  Finished up my intern project between days at school.</p>
             <p>  (React, Redux)
             <h3> Engineering intern, Summer 2017</h3>
             <p> Designed and developed a web application to optimize online shopping in a retail setting.</p>
@@ -50,24 +59,26 @@
         <div class = "section">
             <h1> Community &amp; Leadership </h1>
             <h2> <a href = "http://innovativedesign.club">Innovative Design</a> </h2>
-            <h3> VP External Affairs, AUG 2015 - Present </h3>
-            <p>  Currently organizing a day-long designathon for beginner and intermediate student designers. </p>
-            <p>  Contact me if you're a designer interested in joinig us at UC Berkeley on Nov. 4! </p>
-            <p>  Managed logistics, e.g. emails, permits, room reservations,  membership, event calendar.</p>
-            <p>  Led a team of eight designers to create pro bono design work for student organizations. </p>
+            <h3> VP External Affairs, AUG 2015 - DEC 2017 </h3>
+            <p>  Organized a day-long student <a href="https://cmyk.innovativedesign.club/">designathon</a>; invited and coordinated a panel of speakers/judges from the design industry. </p>
+            <h3> VP Administration, JAN 2017 - MAY 2017 </h3>
+            <p>  Managed club logistics, e.g. emails, room reservations, and membership.</p>
+            <p>  Led a team of eight designers to create design work for student organizations. </p>
+            <h3> Blue Team Designer, AUG 2015 - DEC 2016 </h3>
             <p>  Designed <a href = "http://cargocollective.com/xbarbarayang/Logo">logos and visual assets</a> for off-campus organizations.</p>
         <div class = "section">
             <h1> Skills </h1>
             <h2> Code</h2>
-            <h3> ReactJS • HTML/CSS • Python • Java </h3>
+            <h3> ReactJS • Redux • HTML/CSS • Python </h3>
             <h2> Design </h2>
-            <h3> Photoshop • Illustrator • Typography • Lettering</h3>
-            <h2> Tools </h2>
-            <h3> GitHub • Slack • Asana </h3>
+            <h3> Photoshop • Illustrator • Lettering • Sketching</h3>
+            <h2> Food </h2>
+            <h3> Pasta • Fried Rice • Grilled Cheese </h3>
+            <p> These sound unexciting but I think my cooking has been <a href="http://instagr.am/nourrisure">pretty good</a>. </p>
         </div>
         </div>
         <footer>
-        <p> Last edit: August 28, 2017 </p>
+        <p> Last edit: April 26, 2018 </p>
         </footer>
     </body>
 </html>
