Update index.html for fall

--- a/index.html
+++ b/index.html
@@ -18,49 +18,50 @@
         <header>
             <div id = "name"> Barbara Yang </div>
             <a id = "printable" href = "assets/resume.pdf" target ="_blank" > PDF </a>
-            <p> Student, front-end developer, aspiring home chef </p>
+            <p> front-end software engineer & aspiring home chef</p>
             <p> by@berkeley.edu </p>
             <div id = "links">
                 <a href = "http://linkedin.com/in/xbarbarayang/">LinkedIn</a>
                 <a href = "https://github.com/by-co">GitHub</a>
-
             </div>
         </header>
 
         <div class = "section">
             <h1> Education </h1>
-            <h2> University of California, Berkeley</h2>
-            <h3> B.A. Cognitive Science, Minor in Computer Science, May 2019 </h3>
-            <p> Recent coursework that I've enjoyed: </p>
-            <ul>
-              <li> ART13 Painting; LING100 Intro to Linguistics; PSYCH167AC Stigma and Prejudice; CS184 Computer Graphics
-              </li>
-            </ul>
+            <h2> UC Berkeley</h2>
+            <h3> B.A. Cognitive Science, 2015-2019 </h3>
+            <p> Minor in Computer Science. </p>
+            <p> Talk to me about ↠ Painting; Linguistics; Stigma and Prejudice; Computer Graphics; Brain, Mind, and Behavior </p>
+            <p> Upcoming ↠ Sociolinguistics; Neuroscience; Behavioral Economics; Personality Psych; Computational Photography </p>
+
         </div>
         <div class = "section">
             <h1> Experience </h1>
+            
             <h2> <a href = "https://www.nerdwallet.com">Nerdwallet</a></h2>
-            <h3> Engineering Intern, Summer 2018 🎉🤓 </h3>
-            <p>  Incoming intern for the Mobile team.</p>
-            <p> (React Native) </p>
+            <h3> Engineering Intern, Summer 2018 </h3>
+            <p>  Built out a major consumer feature for NerdWallet's flagship iOS/Android app.</p>
+            <p> (React Native, Redux, JavaScript ES6) </p>
 
             <h2> <a href = "https://www.everlane.com/r/5efaex">Everlane</a></h2>
             <h3> Engineering contractor, Fall/Winter 2017 </h3>
-            <p>  Finished up my intern project between days at school.</p>
-            <p>  (React, Redux)
+            <p>  Revamped transactional email templates (e.g. order confirmation, shipping notification) from the ground up. </p>
+            <p>  Continued development on my intern project.</p>
+            <p>  (HTML, CSS, Zephyr, React, Redux)
             <h3> Engineering intern, Summer 2017</h3>
             <p> Designed and developed a web application to optimize online shopping in a retail setting.</p>
             <p> (React, HTML, CSS) </p>
+            
             <h2> <a href = "http://girlswhocode.com">Girls Who Code</a></h2>
             <h3> Teaching assistant, Summer 2016</h3>
-            <p>  Assisted in the instruction of introductory CS curriculum to 20 high school girls.</p>
-            <p>  Taught lessons and helped guide projects on web development, Python, OOP and robotics.</p>
+            <p>  Helped teach computer science and programming fundamentals to 20 high school girls.</p>
+            <p>  Led lessons and helped guide projects on web development, Python, OOP and Arduino.</p>
         </div>
         <div class = "section">
             <h1> Community &amp; Leadership </h1>
             <h2> <a href = "http://innovativedesign.club">Innovative Design</a> </h2>
             <h3> VP External Affairs, AUG 2015 - DEC 2017 </h3>
-            <p>  Organized a day-long student <a href="https://cmyk.innovativedesign.club/">designathon</a>; invited and coordinated a panel of speakers/judges from the design industry. </p>
+            <p>  Organized a day-long student <a href="https://cmyk.innovativedesign.club/">designathon</a>, bringing in a panel of speakers/judges from the design industry. </p>
             <h3> VP Administration, JAN 2017 - MAY 2017 </h3>
             <p>  Managed club logistics, e.g. emails, room reservations, and membership.</p>
             <p>  Led a team of eight designers to create design work for student organizations. </p>
@@ -69,16 +70,16 @@
         <div class = "section">
             <h1> Skills </h1>
             <h2> Code</h2>
-            <h3> ReactJS • Redux • HTML/CSS • Python </h3>
+            <h3> React • React Native • Redux • HTML/CSS • Python </h3>
             <h2> Design </h2>
             <h3> Photoshop • Illustrator • Lettering • Sketching</h3>
             <h2> Food </h2>
-            <h3> Pasta • Fried Rice • Grilled Cheese </h3>
-            <p> These sound unexciting but I think my cooking has been <a href="http://instagr.am/nourrisure">pretty good</a>. </p>
+            <h3> Salads • Grilled Cheese • Chicken Katsu </h3>
+            <p>  I'm always trying to learn <a href="http://instagr.am/nourrisure">new dishes</a>. </p>
         </div>
         </div>
         <footer>
-        <p> Last edit: April 26, 2018 </p>
+        <p> Last edit: August 14, 2018 </p>
         </footer>
     </body>
 </html>
