Update for new year. AAdd tracking

--- a/index.html
+++ b/index.html
@@ -1,85 +1,113 @@
 <!doctype html>
 <html>
-    <head>
-        <title>Barbara Yang</title>
-        <meta charset="utf-8"/>
-        <link rel="stylesheet" href="stylesheets/style.css">
-        <link href="https://fonts.googleapis.com/css?family=Karla|Lora" rel="stylesheet">
 
-        <meta name="description" content="Resume"/>
-        <meta name="author" content="Barbara Yang"/>
-        <meta name="keywords" content="">
-        <meta property="og:url" content="http://by-co.github.com/index.html"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131678826-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
 
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-    </head>
-    <body>
-        <header>
-            <div id = "name"> Barbara Yang </div>
-            <a id = "printable" href = "assets/resume.pdf" target ="_blank" > PDF </a>
-            <p> front-end software engineer & aspiring home chef</p>
-            <p> by@berkeley.edu </p>
-            <div id = "links">
-                <a href = "http://linkedin.com/in/xbarbarayang/">LinkedIn</a>
-                <a href = "https://github.com/by-co">GitHub</a>
-            </div>
-        </header>
+      gtag('config', 'UA-131678826-2');
+    </script>
+    <title>Barbara Yang</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Karla|Lora" rel="stylesheet">
 
-        <div class = "section">
-            <h1> Education </h1>
-            <h2> UC Berkeley</h2>
-            <h3> B.A. Cognitive Science, 2015-2019 </h3>
-            <p> Minor in Computer Science. </p>
-            <p> Talk to me about ↠ Painting; Linguistics; Stigma and Prejudice; Computer Graphics; Brain, Mind, and Behavior </p>
-            <p> Upcoming ↠ Sociolinguistics; Neuroscience; Behavioral Economics; Personality Psych; Computational Photography </p>
+    <meta name="description" content="Resume" />
+    <meta name="author" content="Barbara Yang" />
+    <meta name="keywords" content="">
+    <meta property="og:url" content="http://by-co.github.com/index.html" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-        </div>
-        <div class = "section">
-            <h1> Experience </h1>
-            
-            <h2> <a href = "https://www.nerdwallet.com">Nerdwallet</a></h2>
-            <h3> Engineering Intern, Summer 2018 </h3>
-            <p>  Built out a major consumer feature for NerdWallet's flagship iOS/Android app.</p>
-            <p> (React Native, Redux, JavaScript ES6) </p>
+  <body>
+    <header>
+      <div id="name"> Barbara Yang </div>
+      <a id="printable" href="assets/resume.pdf" target="_blank"> PDF </a>
+      <p> front-end engineer, wannabe creative, &amp; aspiring home chef </p>
+      <p> by@berkeley.edu </p>
+      <div id="links">
+        <a href="https://linkedin.com/in/xbarbarayang/">LinkedIn</a>
+        <a href="https://github.com/by-co">GitHub</a>
+        <a href="https://twitter.com/bydotco">Twitter</a>
+      </div>
+    </header>
 
-            <h2> <a href = "https://www.everlane.com/r/5efaex">Everlane</a></h2>
-            <h3> Engineering contractor, Fall/Winter 2017 </h3>
-            <p>  Revamped transactional email templates (e.g. order confirmation, shipping notification) from the ground up. </p>
-            <p>  Continued development on my intern project.</p>
-            <p>  (HTML, CSS, Zephyr, React, Redux)
-            <h3> Engineering intern, Summer 2017</h3>
-            <p> Designed and developed a web application to optimize online shopping in a retail setting.</p>
-            <p> (React, HTML, CSS) </p>
-            
-            <h2> <a href = "http://girlswhocode.com">Girls Who Code</a></h2>
-            <h3> Teaching assistant, Summer 2016</h3>
-            <p>  Helped teach computer science and programming fundamentals to 20 high school girls.</p>
-            <p>  Led lessons and helped guide projects on web development, Python, OOP and Arduino.</p>
-        </div>
-        <div class = "section">
-            <h1> Community &amp; Leadership </h1>
-            <h2> <a href = "http://innovativedesign.club">Innovative Design</a> </h2>
-            <h3> VP External Affairs, AUG 2015 - DEC 2017 </h3>
-            <p>  Organized a day-long student <a href="https://cmyk.innovativedesign.club/">designathon</a>, bringing in a panel of speakers/judges from the design industry. </p>
-            <h3> VP Administration, JAN 2017 - MAY 2017 </h3>
-            <p>  Managed club logistics, e.g. emails, room reservations, and membership.</p>
-            <p>  Led a team of eight designers to create design work for student organizations. </p>
-            <h3> Blue Team Designer, AUG 2015 - DEC 2016 </h3>
-            <p>  Designed <a href = "http://cargocollective.com/xbarbarayang/Logo">logos and visual assets</a> for off-campus organizations.</p>
-        <div class = "section">
-            <h1> Skills </h1>
-            <h2> Code</h2>
-            <h3> React • React Native • Redux • HTML/CSS • Python </h3>
-            <h2> Design </h2>
-            <h3> Photoshop • Illustrator • Lettering • Sketching</h3>
-            <h2> Food </h2>
-            <h3> Salads • Grilled Cheese • Chicken Katsu </h3>
-            <p>  I'm always trying to learn <a href="http://instagr.am/nourrisure">new dishes</a>. </p>
-        </div>
-        </div>
-        <footer>
-        <p> Last edit: August 14, 2018 </p>
-        </footer>
-    </body>
+    <section>
+      <h1> Education </h1>
+      <h2> UC Berkeley</h2>
+      <h3> B.A. Cognitive Science, 2015-2019 </h3>
+      <p> Minor in Computer Science. </p>
+      <p> Talk to me about ↠ Painting; Linguistics; Stigma &amp; Prejudice; Cities &amp;
+        Theories; Personality; Computer Graphics; Neuroscience; Perception </p>
+    </section>
+    <section>
+      <h1> Experience </h1>
+      <h2> <a href="https://airtable.com/invite/r/m5GrK0VR">Airtable</a></h2>
+      <h3> Product Engineer, incoming August 2019 </h3>
+      <p> Putting my love of spreadsheets & beautiful products to work.</p>
+
+      <h2> <a href="https://www.nerdwallet.com">Nerdwallet</a></h2>
+      <h3> Engineering Intern, Summer 2018 </h3>
+      <p> Built out a major consumer feature for NerdWallet's flagship iOS/Android app.</p>
+      <p> (React Native, Redux, JavaScript ES6) </p>
+
+      <h2> <a href="https://www.everlane.com/r/5efaex">Everlane</a></h2>
+      <h3> Engineering contractor, Fall/Winter 2017 </h3>
+      <p> Revamped transactional email templates (e.g. order confirmation, shipping notification) from the ground up.
+      </p>
+      <p> Continued development on my intern project.</p>
+      <p> (HTML, CSS, Zephyr, React, Redux)
+        <h3> Engineering intern, Summer 2017</h3>
+        <p> Designed and developed a web application to optimize online shopping in a retail setting.</p>
+        <p> (React, HTML, CSS) </p>
+
+        <h2> <a href="http://girlswhocode.com">Girls Who Code</a></h2>
+        <h3> Teaching assistant, Summer 2016</h3>
+        <p> Helped teach computer science and programming fundamentals to 20 high school girls.</p>
+        <p> Led lessons and helped guide projects on web development, Python, OOP and Arduino.</p>
+    </section>
+    <section>
+      <h1> Community &amp; Leadership </h1>
+      <h2> <a href="http://calblueprint.org">Blueprint</a> </h2>
+      <h3> Project Leader, Spring 2019 </h3>
+      <p> As my final undergraduate experience, I'm leading a student developer team to finish and deliver our project
+        to
+        SFAI. </p>
+      <h3> Designer/Developer, Fall 2018 </h3>
+      <p> Created an MVP student art marketplace (Ruby on Rails, React, Figma) for the San Francisco Art Institute.</p>
+      <h2> <a href="http://innovativedesign.club">Innovative Design</a> </h2>
+      <h3> VP External Affairs, Fall 2017 </h3>
+      <p> Organized a day-long student <a href="https://cmyk.innovativedesign.club/">designathon</a>, bringing in
+        a
+        panel of speakers/judges from the design industry. </p>
+      <h3> VP Administration, Spring 2017 </h3>
+      <p> Managed club logistics, e.g. emails, room reservations, and membership.</p>
+      <p> Led a team of eight designers to create design work for student organizations. </p>
+      <h3> Blue Team Designer, 2015-2016 </h3>
+      <p> Designed <a href="http://cargocollective.com/xbarbarayang/Logo">logos and visual assets</a> for
+        off-campus
+        organizations.</p>
+      <section>
+        <h1> Skills </h1>
+        <h2> Code</h2>
+        <h3> React • React Native • Redux • HTML/CSS • Python </h3>
+        <h2> Design </h2>
+        <h3> Photoshop • Illustrator • Lettering • Sketching</h3>
+        <h2> Food </h2>
+        <h3> Somen Noodles • Salads • Grilled Cheese • Chicken Katsu </h3>
+        <p> I'm always trying to learn <a href="http://instagr.am/nourrisure">new dishes</a>. </p>
+      </section>
+      </div>
+      <footer>
+        <p> Last edit: January 3, 2019 </p>
+      </footer>
+  </body>
+
 </html>
